# GraphicsProject

code_for_pointcloud_generation/: CMakeLists.txt  README.txt  copy.py  main.cpp  run.py  run2.py
code_for_solver/: checker.py  coloror.py  graphicsolver.m  merger.py  readme.txt
example/: const.txt  corre.txt  readme.txt  result.txt  src1.ply  trans.txt
